# video-verticalization

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
video_verticalization/: evaluate.py  helpers.py  model.py  verticalize.py  video_metadata.py
