[tool.poetry]
name = "video_verticalization"
version = "0.1.0"
description = ""
authors = ["Aleksandr Konshin <akonshin@ivi.ru>"]
license = "MIT"

[tool.poetry.scripts]
verticalize = 'video_verticalization.verticalize:verticalize'
evaluate = 'video_verticalization.evaluate:evaluate'

[tool.poetry.dependencies]
python = "^3.8"
scikit-video = "^1.1.11"
numpy = "^1.24.2"
tqdm = "^4.65.0"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
